[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/main/route1.png" type="Texture" id=1]
[ext_resource path="res://src/main/route2.png" type="Texture" id=2]
[ext_resource path="res://cs.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 1.54143e-43, 0.139073, 0.807947, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 1.54143e-43, 0.0927152, 0.880795, 0.993378 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("img/Evil/Evil:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.45, 0.45 ), Vector2( 0.55, 0.55 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("img/Normal/Normal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.45, 0.45 ), Vector2( 0.55, 0.55 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("img/Evil/Evil:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.55, 0.55 ), Vector2( 0.45, 0.45 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("img/Normal/Normal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.55, 0.55 ), Vector2( 0.45, 0.45 ) ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Background:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=12]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("img/cover:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "fadeout"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("img/cover:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="cs" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 508, 296 )
rotation = 1.5708
scale = Vector2( 0.293886, 1033.52 )
texture = SubResource( 2 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 517, 305 )
scale = Vector2( 0.507477, 614.052 )
texture = SubResource( 4 )

[node name="img" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evil" type="Control" parent="img"]
margin_left = 141.0
margin_top = 191.0
margin_right = 464.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evil" type="Sprite" parent="img/Evil"]
position = Vector2( 161, 86 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="Normal" type="Control" parent="img"]
margin_left = 539.0
margin_top = 189.0
margin_right = 866.0
margin_bottom = 364.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Sprite" parent="img/Normal"]
position = Vector2( 161, 86 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="cover" type="Sprite" parent="img"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 518, 301 )
scale = Vector2( 0.507038, 598.15 )
texture = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Hover Evil" = SubResource( 7 )
"anims/Hover Normal" = SubResource( 8 )
"anims/UnHover Evil" = SubResource( 9 )
"anims/UnHover Normal" = SubResource( 10 )
anims/background = SubResource( 11 )

[node name="fx" type="AnimationPlayer" parent="."]
anims/fadein = SubResource( 12 )
anims/fadeout = SubResource( 13 )

[connection signal="gui_input" from="img/Evil" to="." method="_on_Evil_gui_input"]
[connection signal="mouse_entered" from="img/Evil" to="." method="_on_Evil_mouse_entered"]
[connection signal="mouse_exited" from="img/Evil" to="." method="_on_Evil_mouse_exited"]
[connection signal="mouse_entered" from="img/Normal" to="." method="_on_Normal_mouse_entered"]
[connection signal="mouse_exited" from="img/Normal" to="." method="_on_Normal_mouse_exited"]
[connection signal="animation_finished" from="fx" to="." method="_on_fx_animation_finished"]
